--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "turbolinks": "^5.2.0",
-    "typed.js": "^2.0.11"
+    "typed.js": "^2.0.11",
+    "typeit": "^7.0.4"
   },
   "version": "0.1.0",
   "devDependencies": {
